--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter Program</title>
-    <link rel="stylesheet" href="./currency.css">
+    <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
@@ -62,7 +62,7 @@
     </div>
 
 
-    <script src="./currency.js"></script>
+    <script src="./index.js"></script>
     
 </body>
 </html>
